kuber/deployments/logicapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logicapi-deployment
  labels:
    app: logicapi
    tier: backend
spec:
  selector:
    matchLabels:
      app: logicapi
      tier: backend
  replicas: 1
  template:
    metadata:
      name: logicapi
      labels:
        app: logicapi
        tier: backend
    spec:
      containers:
        - name: logicapi
          image: jhncde/logicapi:0.1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: logicapi-service
  labels:
    app: logicapi
    tier: backend
spec:
  selector:
    app: logicapi
    tier: backend
  ports:
  - port: 80
