kuber/deployments/schoolapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schoolapi-deployment
  labels:
    app: schoolapi
    tier: backend
spec:
  selector:
    matchLabels:
      app: schoolapi
      tier: backend
  replicas: 1
  template:
    metadata:
      name: schoolapi
      labels:
        app: schoolapi
        tier: backend
    spec:
      containers:
        - name: webapi
          image: jhncde/schoolapi:0.1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: schoolapi-service
  labels:
    app: schoolapi
    tier: backend
spec:
  selector:
    app: schoolapi
    tier: backend
  ports:
    - port: 80
