kuber/deployments/webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
  labels:
    app: school-system
    tier: backend
spec:
  selector:
    matchLabels:
      app: school-system
      tier: backend
  replicas: 1
  template:
    metadata:
      name: webapi-pod
      labels:
        app: school-system
        tier: backend
    spec:
      containers:
        - name: webapi
          image: jhncde/school-api:3.0.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
  labels:
    app: school-system
    tier: backend
spec:
  selector:
    app: school-system
    tier: backend
  ports:
    - port: 80
